# Tasky

./: CMakeLists.txt  IFIleRepository.h  IModel.h  IObserver.h  LICENSE  MainView.cpp  Model.cpp  Model.h  README.md  Task.cpp  Task.h  XMLFileRepository.cpp  XMLFileRepository.h  data.xml  main.cpp
Controllers/: DayViewController.cpp  DayViewController.h  EditTaskViewController.cpp  EditTaskViewController.h  ListTasksViewController.cpp  ListTasksViewController.h  MainViewController.cpp  MainViewController.h
Exceptions/: ImpossibleToCreateFileExeption.h
FileManagement/: IFIleRepository.h  XMLFileRepository.cpp  XMLFileRepository.h
Models/: IModel.h  Model.cpp  Model.h  Task.cpp  Task.h
Views/: ListTasksView.cpp  ListTasksView.h  MainFrame.cpp  MainFrame.h  MainView.cpp  MainView.h  wxDayBoxView.cpp  wxDayBoxView.h  wxDayView.cpp  wxDayView.h  wxEditTaskView.cpp  wxEditTaskView.h  wxToolPanel.cpp  wxToolPanel.h
pugi/: pugixml.cpp  pugixml.hpp
test/: CMakeLists.txt  ModelFixture.cpp  XMLFilerepositoryFixture.cpp  runAllTests.cpp
test/lib/googletest/: CMakeLists.txt
test/lib/googletest/cmake/: internal_utils.cmake
test/lib/googletest/include/gtest/: gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest.h
test/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-port.h
test/lib/googletest/samples/: sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
test/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-typed-test.cc  gtest.cc
test/lib/googletest/test/: gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-linked_ptr_test.cc  gtest-listener_test.cc  gtest-message_test.cc  gtest-options_test.cc  gtest-param-test2_test.cc  gtest-param-test_test.cc  gtest-port_test.cc  gtest-printers_test.cc  gtest-test-part_test.cc  gtest-tuple_test.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_assert_by_exception_test.cc  gtest_break_on_failure_unittest_.cc  gtest_catch_exceptions_test_.cc  gtest_color_test_.cc  gtest_env_var_test_.cc  gtest_environment_test.cc  gtest_filter_unittest_.cc  gtest_help_test_.cc  gtest_json_outfiles_test.py  gtest_json_output_unittest.py  gtest_list_tests_unittest_.cc  gtest_main_unittest.cc  gtest_output_test_.cc  gtest_pred_impl_unittest.cc  gtest_premature_exit_test.cc  gtest_prod_test.cc  gtest_repeat_test.cc  gtest_shuffle_test_.cc  gtest_stress_test.cc  gtest_throw_on_failure_ex_test.cc  gtest_uninitialized_test.py  gtest_uninitialized_test_.cc  gtest_unittest.cc  gtest_xml_outfile1_test_.cc  gtest_xml_outfile2_test_.cc  gtest_xml_outfiles_test.py  (+4 more)
test/lib/googletest/xcode/Scripts/: versiongenerate.py
